@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.vodie"
        name="VODie - Video On Demand Ireland"
-       version="1.1.3"
+       version="1.1.3a"
        provider-name="kitesurfing@kitesurfing.ie">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
