@@ -1,3 +1,10 @@
+[B]Version 1.1.3a[/B]
+- Imported nickhx/t0mm0 patch for MagnetWebTV
+- Fixed TV3 scraper for recent changes to TV3 website
+
+[B]Version 1.1.3[/B]
+- Imported from kitesurfing@kitesurfing.ie google code repos
+
 [B]Version 1.1.1[/B]
 
 - Bug Fixes
